--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
